--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,19 +15,19 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: rust-githubactions
-            asset_name: rust-githubactions-x86_64-unknown-linux-gnu
+            asset_name: rust-githubactions-x86_64-unknown-linux-gnu.zip
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
             artifact_name: rust-githubactions
-            asset_name: rust-githubactions-x86_64-unknown-linux-musl
+            asset_name: rust-githubactions-x86_64-unknown-linux-musl.zip
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
             artifact_name: rust-githubactions.exe
-            asset_name: rust-githubactions-x86_64-pc-windows-gnu.exe
+            asset_name: rust-githubactions-x86_64-pc-windows.zip
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: rust-githubactions
-            asset_name: rust-githubactions-x86_64-apple-darwin
+            asset_name: rust-githubactions-x86_64-apple-darwin.zip
 
 
     runs-on: ${{ matrix.os }}
@@ -49,11 +49,15 @@ jobs:
           command: build
           args: --release --target ${{ matrix.target }} --all-features --verbose
 
+      - name: Archive artifact
+        run: |
+          zip -r ${{ matrix.asset_name }} target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.1.1
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+          file: ${{ matrix.asset_name }}
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
           overwrite: true
