--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -51,7 +51,8 @@ jobs:
 
       - name: Archive artifact
         run: |
-          zip -r ${{ matrix.asset_name }} target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+          cd target/${{ matrix.target }}/release
+          zip -r ${{ matrix.asset_name }} ${{ matrix.artifact_name }}
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.1.1
